Stable UI Code, left integration with Etherscan API code

--- a/graph.html
+++ b/graph.html
@@ -12,8 +12,8 @@
 <style type="text/css">
 
         #mynetwork {
-            width: 1290.24px;
-            height: 1088.0px;
+            width: 1121.792px;
+            height: 912.8px;
             background-color: #000000;
             border: 1px solid lightgray;
             position: relative;
@@ -50,8 +50,8 @@
         
 
         // parsing and collecting nodes and edges from the python
-        nodes = new vis.DataSet([{"color": "#eb4034", "font": {"color": "#ffffff"}, "id": "0xDa007777D86AC6d989cC9f79A73261b3fC5e0DA0", "label": "0xDa0077", "shape": "dot"}, {"color": "#9a31a8", "font": {"color": "#ffffff"}, "id": "0xbdb5829f5452Bd10bb569B5B9B54732001ab5ab9", "label": "0xbdb582", "shape": "dot"}, {"color": "#9a31a8", "font": {"color": "#ffffff"}, "id": "0x0ea288c16bd3a8265873c8d0754b9b2109b5b810", "label": "0x0ea288", "shape": "dot"}]);
-        edges = new vis.DataSet([{"from": "0x0ea288c16bd3a8265873c8d0754b9b2109b5b810", "to": "0xbdb5829f5452Bd10bb569B5B9B54732001ab5ab9", "value": 2}, {"from": "0xDa007777D86AC6d989cC9f79A73261b3fC5e0DA0", "to": "0xbdb5829f5452Bd10bb569B5B9B54732001ab5ab9", "value": 2}, {"from": "0xDa007777D86AC6d989cC9f79A73261b3fC5e0DA0", "to": "0x0ea288c16bd3a8265873c8d0754b9b2109b5b810", "value": 1}]);
+        nodes = new vis.DataSet([{"color": "#3155a8", "font": {"color": "#ffffff"}, "id": "0xbdb5829f5452Bd10bb569B5B9B54733001ab5ab9", "label": "0xbdb5829f", "shape": "dot"}, {"color": "#3da831", "font": {"color": "#ffffff"}, "id": "0xbdb5829f5452Bd10bb569B5B4B54732001ab5ab9", "label": "0xbdb5829f", "shape": "dot"}, {"color": "#eb4034", "font": {"color": "#ffffff"}, "id": "0xDa007777D86AC6d989cC9f79A73261b3fC5e0DA0", "label": "0xDa007777", "shape": "dot"}, {"color": "#9a31a8", "font": {"color": "#ffffff"}, "id": "0xbdb5829f5452Bd10bb569B5B9B547320018b5ab9", "label": "0xbdb5829f", "shape": "dot"}, {"color": "#3155a8", "font": {"color": "#ffffff"}, "id": "0xbdb5829f5752Bd10bb569B5B9B54732001ab5ab9", "label": "0xbdb5829f", "shape": "dot"}, {"color": "#eb4034", "font": {"color": "#ffffff"}, "id": "0xbdb5829f5452Bd10bb569B5B9B54732001ab5ab9", "label": "0xbdb5829f", "shape": "dot"}, {"color": "#3da831", "font": {"color": "#ffffff"}, "id": "0xbdb5829f5452Bd10bbC69B5B9B54732001ab5ab9", "label": "0xbdb5829f", "shape": "dot"}, {"color": "#9a31a8", "font": {"color": "#ffffff"}, "id": "0xbdb5829f5452Bd10bb569B5B9B547320B1ab5ab9", "label": "0xbdb5829f", "shape": "dot"}, {"color": "#3da831", "font": {"color": "#ffffff"}, "id": "0xbdb5829f5452Bd10bb569B5A9B54732001ab5ab9", "label": "0xbdb5829f", "shape": "dot"}, {"color": "#eb4034", "font": {"color": "#ffffff"}, "id": "0xbdb5829f5452Bd10bb56DB5B9B54732001ab5ab9", "label": "0xbdb5829f", "shape": "dot"}, {"color": "#9a31a8", "font": {"color": "#ffffff"}, "id": "0x0ea288c16bd3a8265873c8d0754b9b2109b5b810", "label": "0x0ea288c1", "shape": "dot"}, {"color": "#eb4034", "font": {"color": "#ffffff"}, "id": "0xbdb5829f5452Bd10bb569B599B54732001ab5ab9", "label": "0xbdb5829f", "shape": "dot"}, {"color": "#eb4034", "font": {"color": "#ffffff"}, "id": "0xbdb5829f5452Bd10bb569B5B6B54732001ab5ab9", "label": "0xbdb5829f", "shape": "dot"}, {"color": "#9a31a8", "font": {"color": "#ffffff"}, "id": "0xbdb5829f5452Bd10bb569B509B54732001ab5ab9", "label": "0xbdb5829f", "shape": "dot"}, {"color": "#eb4034", "font": {"color": "#ffffff"}, "id": "0xbdb5829f5452B510bb569B5B9B54732001ab5ab9", "label": "0xbdb5829f", "shape": "dot"}]);
+        edges = new vis.DataSet([{"from": "0x0ea288c16bd3a8265873c8d0754b9b2109b5b810", "to": "0xbdb5829f5452Bd10bb569B5B9B54732001ab5ab9", "value": 2}, {"from": "0xDa007777D86AC6d989cC9f79A73261b3fC5e0DA0", "to": "0xbdb5829f5452Bd10bb569B5B9B54732001ab5ab9", "value": 2}]);
 
         // adding nodes and edges to the graph
         data = {nodes: nodes, edges: edges};
